objects/MetadataDeploymentResult__e.object
<CustomObject>
    <fields>
        <fullName>DummyField__c</fullName>
        <description>This field is used for CSVToCMDTRecordsControllerTest Class purpose.</description>
        <label>DummyField</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>MetadataDeploymentResult</label>
    <pluralLabel>MetadataDeploymentResults</pluralLabel>
</CustomObject>